--- a/conf/map/battle/feature.conf
+++ b/conf/map/battle/feature.conf
@@ -40,7 +40,7 @@ features: {
 
 	// Atcommand suggestions (Note 1)
 	// If one type incomplete atcommand, it will suggest the complete ones.
-	atcommand_suggestions: false
+	atcommand_suggestions: true
 
 	// Banking (Note 1)
 	// Requires: 2013-07-24aRagexe or later
@@ -92,10 +92,10 @@ features: {
 	// Enable Refinery UI (requires 2016-10-05Ragexe/RE)
 	// true:  enable (Default)
 	// false: disable
-	enable_refinery_ui: false
+	enable_refinery_ui: true
 	
 	// Replace Refine NPCs with Refinery UI
 	// true:  enable
 	// false: disable (default)
-	replace_refine_npcs: false
+	replace_refine_npcs: true
 }
