--- a/db/item_options.conf
+++ b/db/item_options.conf
@@ -44,6 +44,8 @@ item_options_db: (
 {
 	Id: 1
 	Name: "VAR_MAXHPAMOUNT"
+	ShowDropEffect: true
+	DropEffectMode: 1
 	Script: <" bonus(bMaxHP, getequippedoptioninfo(IT_OPT_VALUE)); ">
 },
 {
