--- a/db/option_drop_groups.conf
+++ b/db/option_drop_groups.conf
@@ -49,5 +49,13 @@ option_drop_group_db: (
 		// ... (up to MAX_ITEM_OPTION)
 	),
 **************************************************************************/
+
+	TEST_GROUP: (
+	{
+	Rate: 10000
+	VAR_MAXHPAMOUNT: 100
+	
+},
+)
 }
 )
