--- a/db/re/mob_db.conf
+++ b/db/re/mob_db.conf
@@ -200,7 +200,7 @@ mob_db: (
 	MvpExp: 0
 	Drops: {
 		Jellopy: 7000
-		Knife_: 100
+		Knife_: (100, "TEST_GROUP")
 		Sticky_Mucus: 400
 		Apple: 1000
 		Empty_Bottle: 1500
