--- a/conf/char/char-server.conf
+++ b/conf/char/char-server.conf
@@ -35,7 +35,7 @@ char_configuration: {
 	// NOTE: Do not use spaces or any of these characters which are not allowed in
 	//       Windows filenames \/:*?"<>|
 	//       ... or else guild emblems won't work client-side!
-	server_name: "Hercules"
+	server_name: "Zero Test"
 
 	// Wisp name for server: used to send wisp from server to players (between 4 to 23 characters)
 	wisp_server_name: "Server"
@@ -43,7 +43,7 @@ char_configuration: {
 	// Guild earned exp modifier.
 	// Adjusts taxed exp before adding it to the guild's exp. For example,
 	// if set to 200, the guild receives double the player's taxed exp.
-	guild_exp_rate: 100
+	guild_exp_rate: 10000
 
 	// Information related to inter-server behavior
 	inter: {
@@ -55,7 +55,7 @@ char_configuration: {
 		// The character server connects to the login server using this IP address.
 		// NOTE: This is useful when you are running behind a firewall or are on
 		// a machine with multiple interfaces.
-		//login_ip: "127.0.0.1"
+		login_ip: "127.0.0.1"
 
 		// The character server listens on the interface with this IP address.
 		// NOTE: This allows you to run multiple servers on multiple interfaces
@@ -68,7 +68,7 @@ char_configuration: {
 		// Character Server IP
 		// The IP address which clients will use to connect.
 		// Set this to what your server's public IP address is.
-		//char_ip: "127.0.0.1"
+		char_ip: "127.0.0.1"
 
 		// Character Server Port
 		char_port: 6121
